--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
     />
   </head>
   <body>
-    <p>ffdddddddf</p>
+    <h2>Type in the country</h2>
+    <input type="text" name="search-country" id="query-input" />
+    <ul id="country-continer"></ul>
     <script src="./index.js"></script>
   </body>
 </html>
